--- a/SourceCode/app/src/main/res/layout/activity_my_diary.xml
+++ b/SourceCode/app/src/main/res/layout/activity_my_diary.xml
@@ -553,7 +553,7 @@
         app:srcCompat="@drawable/myprofile_icon" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/profile_streak"
         android:layout_width="34dp"
         android:layout_height="13dp"
         android:text="Home"
