--- a/SourceCode/app/src/main/res/layout/activity_profile.xml
+++ b/SourceCode/app/src/main/res/layout/activity_profile.xml
@@ -333,7 +333,7 @@
         app:layout_constraintVertical_bias="0.46" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/profile_streak"
         android:layout_width="39dp"
         android:layout_height="27dp"
         android:text="0"
